--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,30 @@ body {
   }
 }
 
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 15px;
+  text-align: left;
+}
+
+.stock-low {
+  background-color: red;
+  color: white;
+}
+
+.stock-medium {
+  background-color: orange;
+  color: black;
+}
+
 
 
 /* ############################################################################### */
@@ -512,3 +536,12 @@ body {
   left: 19.33px;
 }
 */
+
+/* ############################################################################### */
+/* Product */
+/* ############################################################################### */
+
+
+
+
+/* ############################################################################### */
