--- a/css/main.css
+++ b/css/main.css
@@ -268,29 +268,6 @@ body {
   }
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-table, th, td {
-  border: 1px solid black;
-}
-
-th, td {
-  padding: 15px;
-  text-align: left;
-}
-
-.stock-low {
-  background-color: red;
-  color: white;
-}
-
-.stock-medium {
-  background-color: orange;
-  color: black;
-}
 
 
 
@@ -545,3 +522,91 @@ th, td {
 
 
 /* ############################################################################### */
+/* Admin */
+/* ############################################################################### */
+
+.container-admin {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  width: 100vw;
+}
+
+
+.container-box-stocks, .container-box-addstock, .container-box-users {
+  width: 33%; /* Adjust the width as needed */
+  height: 100%;
+  overflow-y: auto;
+  padding: 20px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9; /* Adjust the background color as needed */
+}
+
+.main-content-admin {
+  flex: 1;
+  padding: 20px;
+  /* Add your main content styles here */
+}
+
+.container-box-addstock {
+  margin-left: auto; /* Pushes the addstock box to the far right */
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+}
+
+/* Additional CSS for the stock table */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 15px;
+  text-align: left;
+}
+
+.stock-low {
+  background-color: red;
+  color: white;
+}
+
+.stock-medium {
+  background-color: orange;
+  color: black;
+}
+
+.container-box-addstock form {
+  display: flex;
+  flex-direction: column;
+}
+
+.container-box-addstock h2 {
+  margin-bottom: 20px;
+}
+
+.container-box-addstock label {
+  margin-bottom: 5px;
+}
+
+.container-box-addstock input {
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.container-box-addstock button {
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.container-box-addstock button:hover {
+  background-color: #45a049;
+}
