--- a/view/css.css
+++ b/view/css.css
@@ -13,16 +13,16 @@ h1 {
   color: #333;
   margin: 20px 0;
 }
-
 .product-list {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  flex-basis: auto;
   justify-content: left;
 }
 
 .product {
+  display: flex;
+  align-items: center;
   background: #fff;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -30,6 +30,18 @@ h1 {
   padding: 20px;
   width: 300px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.product-image {
+  margin-left: auto;
+  margin-right: 10px;
+  max-width: 100px;
+  max-height: 100px;
+  border-radius: 5px;
+}
+
+.product-info {
+  flex: 1;
 }
 
 .product h2 {
